Stage Drive/Dashboard/justbitteam-stagedriving_dash-4cdbe67ac041/.kube/production/controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stagedriving-prod-dash
  labels:
    app: stagedriving-prod-dash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stagedriving-prod-dash
  template:
    metadata:
      labels:
        app: stagedriving-prod-dash
    spec:
      containers:
      - image: gcr.io/stage-driving/bitbucket.org/justbitteam/stagedriving_dash:f7822ca
        name: stagedriving-prod-dash
        resources:
          requests:
            cpu: 20m
        ports:
        - containerPort: 80
