Stage Drive/Dashboard/justbitteam-stagedriving_dash-4cdbe67ac041/.kube/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: stagedriving-prod-dash
  name: stagedriving-prod-dash
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  # Label keys and values that must match in order to receive traffic for this service.
  selector:
    app: stagedriving-prod-dash
