Stage Drive/Dashboard/justbitteam-stagedriving_dash-4cdbe67ac041/.kube/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stagedriving-prod-dash
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - dashboard.stagedriving.com
    secretName: stagedriving-prod-dash2-secret
  rules:
  - host: dashboard.stagedriving.com
    http:
      paths:
      - path: /
        backend:
          serviceName: stagedriving-prod-dash
          servicePort: 80
